--- a/roles/web_server/tasks/main.yml
+++ b/roles/web_server/tasks/main.yml
@@ -39,7 +39,7 @@
     group: "{{ nginx_user }}"
     mode: '0600'
   no_log: true
-  notify: Restart web server service
+  notify: restart_web_server
 
 - name: Ensure the Nginx web server service is started
   community.docker.docker_compose_v2:
