--- a/roles/opencti/tasks/main.yml
+++ b/roles/opencti/tasks/main.yml
@@ -41,7 +41,7 @@
     group: "{{ opencti_user }}"
     mode: '0600'
   no_log: true
-  notify: Restart opencti service
+  notify: restart_opencti
 
 - name: Ensure the OpenCTI Docker service is started
   community.docker.docker_compose_v2:
