--- a/roles/portainer/tasks/main.yml
+++ b/roles/portainer/tasks/main.yml
@@ -37,7 +37,7 @@
     group: "{{ portainer_user }}"
     mode: '0600'
   no_log: true
-  notify: Restart portainer service
+  notify: restart_portainer
 
 - name: Ensure the Portainer Docker service is started
   community.docker.docker_compose_v2:
